--- a/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
@@ -11,51 +11,18 @@
     <h:body>
         <ui:composition template="./template2.xhtml">
             <ui:define name="cuerpo">
-                <p:panel header="Calculate T.B.K">
-                    <p:growl id="msg" showDetail="true" />
-                    <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
-                        <p:fileUpload style="width: 500px" value="#{fileUploadManagedBean.file}" mode="advanced" 
-                                      fileUploadListener="#{fileUploadManagedBean.fileUploadListener}" dragDropSupport="false"
-                                      update="msg" sizeLimit="10485760" 
-                                      fileLimit="10" allowTypes="/(\.|\/)(txt|csv)$/">
-                        </p:fileUpload> 
-                    </h:panelGrid>
-                    <p:commandButton value="Calculate T.B.K." actionListener="#{fileUploadManagedBean.calcularIndiceTBK()}" icon="ui-icon-calculator" update="resultado"/>
-                    <br></br><br></br>
-                    <h:inputText id="resultado" value="#{fileUploadManagedBean.output}" />
-                    <br></br>
-                    <p:ajaxStatus style="display:block">
-                        <f:facet name="default">
-                            <h:outputText value="Status: StandBy" />
-                        </f:facet>
-                        <f:facet name="start">
-                            <h:outputText value="Status: Procesing..." />
-                        </f:facet>
-                        <f:facet name="complete">
-                            <h:outputText value="Status: Completed" />
-                        </f:facet>
-                    </p:ajaxStatus>
-                    <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
-                    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-                        <p:graphicImage value="Recursos/ajax-loader.gif" />
-                    </p:dialog>
-                    <p:commandButton value="Download Results" ajax="false" >
-                        <p:fileDownload value="#{fileDownloadView.downloadFileTBK()}" />
-                    </p:commandButton>
-                </p:panel>
                 <div class="row">
                     <br/>
                     <div class="col-md-2"></div>
                     <div class="col-lg-8 col-md-4 col-xs-0">
                         <h2 style="text-align:center">TBK's Calculator</h2>
                         <hr/>
-                        
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
                                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            What is Wu-Palmer?
+                                            What is T.B.K.?
                                         </a>
                                     </h4>
                                 </div>
@@ -69,7 +36,7 @@
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
                                         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            How To Use Wu-Palmer Calculator?
+                                            How To Use T.B.K. Calculator?
                                         </a>
                                     </h4>
                                 </div>
@@ -79,14 +46,9 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
-
                         <!--fin-->
-            
-
-                        <p:panel header="Calculate T.B.K">
+                        <p:panel header="Calculate T.B.K.">
                             <p:growl id="msg" showDetail="true" />
                             <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
                                 <p:fileUpload style="width: 500px" value="#{fileUploadManagedBean.file}" mode="advanced" 
@@ -114,6 +76,9 @@
                             <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                                 <p:graphicImage value="Recursos/ajax-loader.gif" />
                             </p:dialog>
+                            <p:commandButton value="Download Results" ajax="false" >
+                                <p:fileDownload value="#{fileDownloadView.downloadFileTBK()}" />
+                            </p:commandButton>
                         </p:panel>
                     </div>
                     <div class="col-md-2"></div>
@@ -122,4 +87,3 @@
         </ui:composition>
     </h:body>
 </html>
-
