Proyecto Completo, solo falta la conexión con Neo4j server mode

--- a/ProyectoPINGESO-web/src/main/webapp/pruebaDescarga.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/pruebaDescarga.xhtml
@@ -12,7 +12,7 @@
             <ui:define name="cuerpo">
                 <h:form>
                     <p:commandButton value="Download" ajax="false" >
-                        <p:fileDownload value="#{fileDownloadView.downloadFileWP()}" />
+                        <p:fileDownload value="#{mbPrueba.mb()}" />
                     </p:commandButton>
                 </h:form>
             </ui:define>
